--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
+        <div id="container">
+            <div id="cabecera">HEAD EXAMPLE</div>
+        </div>
         <h1>Aqui se hara un post</h1>
         <p>primer parrafo</p>
     </body>
