--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Aqui se hara un post</h1>
-        <p>primer parrafo</p>
+        <p>mejoras para este ejemplo entonces se escribe este texto</p>
     </body>
     
 </html>
