pruebas de nuevo parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Aqui se hara un post</h1>
         <p>mejoras para este ejemplo entonces se escribe este texto</p>
+        <p>Hay que tener en cuenta los datos del entrenamiento para poder hacer los ejercicios correctamente</p>
     </body>
     
 </html>
