--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Este es mi primer html en vsCode</title>
+        <title>Este es mi primer html en vsCode 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
